--- a/styles.css
+++ b/styles.css
@@ -472,7 +472,7 @@ main {
     backdrop-filter: blur(2px); /* hace que el contenido resalte */
 }
 body {
-    background: radial-gradient(circle at top, #fdf7ed 0, #f5e7cf 40%, #f1ddbc 100%);
+    background: radial-gradient(circle at top, #fce3b7 0, #f8c66f 40%, #caab78 100%);
     background-image: url("logo.png");
     background-repeat: no-repeat;
     background-position: center 65px;
@@ -480,7 +480,7 @@ body {
     opacity: 0.99;
 }
 body {
-    background-color: #f8f3e9;
+    background-color: #f5dba6;
     background-image: url("logo.png");
     background-repeat: repeat;
     background-size: 120px;
